--- a/css/jade.css
+++ b/css/jade.css
@@ -26,7 +26,7 @@ section{
 }
 
 @media only screen and (max-width: 800px) {
-    .ebuddy-chevron{
+    .jade-chevron{
         width: 36px !important;;
         height: 36px !important;
     }
