--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@ section{
 }
 
 @media only screen and (max-width: 800px) {
+    section{
+        margin:0 40px;
+    }
+    
     .content{
         height: auto !important;
         display: flex;
