--- a/css/about.css
+++ b/css/about.css
@@ -9,6 +9,12 @@ section{
     min-height: 500px;
 }
 
+@media only screen and (max-width: 700px) {
+    section{
+        margin: 0 40px;
+    }
+}
+
 .content-about-me{
     margin-top: 40px;
     height:auto;
