--- a/css/ebuddy.css
+++ b/css/ebuddy.css
@@ -13,6 +13,7 @@ section{
 @media only screen and (max-width: 500px) {
     section{
         min-height:fit-content;
+        margin:0 40px;
     }
 }
 
@@ -201,7 +202,7 @@ section{
     position:absolute;
     right:40%;
     top:30%;
-    z-index:20;
+    z-index:1;
 }
 
 #medium-blue-circle{
@@ -281,68 +282,88 @@ section{
     }
 
     .research-text{
-        height:180vh;
         display:flex !important;
         flex-direction:column;
         position:static!important;
         align-items:center;
         margin-top:20px;
+        height: auto !important;
+        width:100% !important;
     }
 
     .circle{
         font-size: 16px !important;
         font-weight: 600;
-        padding:50px;
+        padding:10px!important;
+        border-radius:0!important;
+        display: block !important;
+        margin-bottom: 10px;
     }    
 
     .large{
-    height:160px !important;
-    width:160px !important;
+    height:auto !important;
+    width:100% !important;
     }
 
     .medium{
-        height:140px !important;
-        width:140px !important;
+        height:auto !important;
+        width:100% !important;
     }
 
     .small{
-        height:100px!important;
-        width:100px!important;
+        height:auto!important;
+        width:100%!important;
     }
 
     #large-yellow-circle{
         position:static!important;
-        left:auto;
-        margin-bottom:10px;
     }
 
 
     #small-blue-circle{
         position:static!important;
-        right:auto;
-        top:auto;
-        margin-bottom:10px;
     }
 
     #medium-blue-circle{
         position:static!important;
-        left:20%;
-        top:auto;
-        margin-bottom:10px;
     }
 
     #medium-yellow-circle{
         position:static!important;
-        left:auto;
-        top:auto;
-        margin-bottom:10px;
     }
 
     .research-text .read-book-girl-img{
         position:static!important;
-        height:100%!important;
-        right:auto;
-        top:auto;
+        height:auto!important;
+        margin-top:40px;
+        margin-bottom:100px;
+        
+    }
+
+    .ebuddy-competitor-analysis{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    }
+
+.ebuddy-competitor-analysis .competitor-analysis-text{
+    display:flex;
+    flex-direction:column;
+    text-align:center;
+    width: 45%;
+    }
+
+.ebuddy-competitor-analysis .ebuddy-competitors{
+    width:45%;
+    }
+
+.ebuddy-competitor-analysis h2{
+    font-family: 'Lato', sans-serif;
+    font-size: 30px;
+    color:white;
+    margin:0;
+    padding:0;
+    margin-bottom:20px;
     }
 }
 
