--- a/css/header.css
+++ b/css/header.css
@@ -7,6 +7,10 @@
 }
 
 @media only screen and (max-width: 600px) {
+    .navigation{
+        padding:0 40px;
+    }
+    
     .logo{
         height:30px !important;
     }
