--- a/css/jade.css
+++ b/css/jade.css
@@ -13,6 +13,7 @@ section{
 @media only screen and (max-width: 500px) {
     section{
         min-height:fit-content;
+        margin:0 40px;
     }
 }
 
