--- a/css/ebuddy.css
+++ b/css/ebuddy.css
@@ -30,6 +30,7 @@ section{
     .ebuddy-chevron{
         width: 36px !important;;
         height: 36px !important;
+        right:40px !important;
     }
 }
 
