--- a/css/about.css
+++ b/css/about.css
@@ -20,6 +20,11 @@ section{
     height:auto;
 }
 
+.download-resume a{
+    text-decoration: none;
+    color:white;
+}
+
 @media only screen and (max-width: 700px) {
   
 
